# discord-bot-template

./: .gitignore  pyproject.toml
discord-bot-template/: __main__.py
discord-bot-template/classes/: bot.py
